--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:statusBarColor">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/white</item>
 
     </style>
 
@@ -15,6 +18,13 @@
         <item name="theme_text_background">@color/white</item>
         <item name="theme_text_backgroundColor">@color/white</item>
         <item name="theme_text_drawableTint">@color/color_304ffe</item>
+
+        <item name="theme_button_textColor">@color/color_304ffe</item>
+        <item name="theme_button_background">@color/white</item>
+        <item name="theme_button_backgroundColor">@color/white</item>
+        <item name="theme_button_drawableTint">@color/color_fce4ec</item>
+        <item name="theme_button_iconTint">@color/color_fce4ec</item>
+
     </style>
 
 
@@ -24,6 +34,12 @@
         <item name="theme_text_background">@color/color_304ffe</item>
         <item name="theme_text_backgroundColor">@color/color_304ffe</item>
         <item name="theme_text_drawableTint">@color/white</item>
+
+        <item name="theme_button_textColor">@color/white</item>
+        <item name="theme_button_background">@color/color_304ffe</item>
+        <item name="theme_button_backgroundColor">@color/color_304ffe</item>
+        <item name="theme_button_drawableTint">@color/white</item>
+        <item name="theme_button_iconTint">@color/white</item>
     </style>
 
 
