--- a/skinlib/src/main/res/values/attars.xml
+++ b/skinlib/src/main/res/values/attars.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--TextView & MaterialTextView-->
     <attr name="theme_text_color" format="reference|color"/>
     <attr name="theme_text_background" format="reference"/>
     <attr name="theme_text_backgroundColor" format="reference|color"/>
     <attr name="theme_text_drawableTint" format="reference|color"/>
+
+    <!--Button & MaterialButton-->
+    <attr name="theme_button_textColor" format="reference|color"/>
+    <attr name="theme_button_background" format="reference"/>
+    <attr name="theme_button_backgroundColor" format="reference|color"/>
+    <attr name="theme_button_drawableTint" format="reference|color"/>
+    <attr name="theme_button_iconTint" format="reference|color"/>
+
 
 </resources>
