--- a/skinlib/src/main/res/values/attars.xml
+++ b/skinlib/src/main/res/values/attars.xml
@@ -14,6 +14,12 @@
     <attr name="theme_button_drawableTint" format="reference|color"/>
     <attr name="theme_button_iconTint" format="reference|color"/>
 
+    <!--RadioButton & MaterialRadioButton-->
+    <attr name="theme_radio_textColor" format="reference|color"/>
+    <attr name="theme_radio_background" format="reference"/>
+    <attr name="theme_radio_backgroundColor" format="reference|color"/>
+    <attr name="theme_radio_drawableTint" format="reference|color"/>
+    <attr name="theme_radio_buttonTint" format="reference|color"/>
 
 
 
