--- a/skinlib/src/main/res/values/attars.xml
+++ b/skinlib/src/main/res/values/attars.xml
@@ -13,6 +13,9 @@
     <attr name="theme_button_backgroundColor" format="reference|color"/>
     <attr name="theme_button_drawableTint" format="reference|color"/>
     <attr name="theme_button_iconTint" format="reference|color"/>
+    <!--仅限MaterialCardView-->
+    <attr name="theme_button_divideColor" format="reference|color"/>
+
 
     <!--RadioButton & MaterialRadioButton-->
     <attr name="theme_radio_textColor" format="reference|color"/>
@@ -22,5 +25,13 @@
     <attr name="theme_radio_buttonTint" format="reference|color"/>
 
 
+    <!--ViewGroup-->
+    <attr name="theme_viewGroup_background" format="reference|color"/>
+    <attr name="theme_viewGroup_backgroundColor" format="reference|color"/>
+
+    <!--CardView & MaterialCardView-->
+    <attr name="theme_card_backgroundColor" format="reference|color"/>
+    <!--仅限MaterialCardView-->
+    <attr name="theme_card_strokeColor" format="reference|color"/>
 
 </resources>
