--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
+        skin="@{`background`}"
         tools:context=".activity.button.ButtonActivity">
 
 
@@ -39,14 +40,6 @@
             android:layout_height="wrap_content"
             skin="@{`textColor|background|iconTint`}"
             />
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/change"
-            android:layout_marginTop="45dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-
 
     </LinearLayout>
 </layout>
