--- a/app/src/main/res/layout/activity_text_view.xml
+++ b/app/src/main/res/layout/activity_text_view.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
+        skin="@{`background`}"
         tools:context=".activity.textview.TextViewActivity">
 
 
@@ -31,11 +32,6 @@
             />
 
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/change"
-            android:layout_marginTop="45dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
         <TextView
             android:text="Switching themes"
