--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,8 @@
 
 
     <style name="Theme1">
+        <item name="theme_viewGroup_background">@color/white</item>
+
         <item name="theme_text_color">@color/color_304ffe</item>
         <item name="theme_text_background">@color/white</item>
         <item name="theme_text_backgroundColor">@color/white</item>
@@ -33,12 +35,16 @@
         <item name="theme_radio_buttonTint">@color/color_fce4ec</item>
 
 
+        <item name="theme_card_backgroundColor">@color/white</item>
+        <item name="theme_card_strokeColor">@color/color_304ffe</item>
 
     </style>
 
 
 
     <style name="Theme2">
+        <item name="theme_viewGroup_background">@color/color_304ffe</item>
+
         <item name="theme_text_color">@color/white</item>
         <item name="theme_text_background">@color/color_304ffe</item>
         <item name="theme_text_backgroundColor">@color/color_304ffe</item>
@@ -56,6 +62,8 @@
         <item name="theme_radio_drawableTint">@color/white</item>
         <item name="theme_radio_buttonTint">@color/white</item>
 
+        <item name="theme_card_backgroundColor">@color/color_304ffe</item>
+        <item name="theme_card_strokeColor">@color/white</item>
 
     </style>
 
