--- a/skinlib/src/main/res/values/attars.xml
+++ b/skinlib/src/main/res/values/attars.xml
@@ -3,23 +3,24 @@
 
     <!--TextView & MaterialTextView-->
     <attr name="theme_text_color" format="reference|color"/>
-    <attr name="theme_text_background" format="reference"/>
+    <attr name="theme_text_background" format="reference|color"/>
     <attr name="theme_text_backgroundColor" format="reference|color"/>
     <attr name="theme_text_drawableTint" format="reference|color"/>
 
     <!--Button & MaterialButton-->
     <attr name="theme_button_textColor" format="reference|color"/>
-    <attr name="theme_button_background" format="reference"/>
+    <attr name="theme_button_rippleColor" format="reference|color"/>
+    <attr name="theme_button_background" format="reference|color"/>
     <attr name="theme_button_backgroundColor" format="reference|color"/>
     <attr name="theme_button_drawableTint" format="reference|color"/>
     <attr name="theme_button_iconTint" format="reference|color"/>
-    <!--仅限MaterialCardView-->
-    <attr name="theme_button_divideColor" format="reference|color"/>
+    <!--仅限MaterialButton-->
+    <attr name="theme_button_strokeColor" format="reference|color"/>
 
 
     <!--RadioButton & MaterialRadioButton-->
     <attr name="theme_radio_textColor" format="reference|color"/>
-    <attr name="theme_radio_background" format="reference"/>
+    <attr name="theme_radio_background" format="reference|color"/>
     <attr name="theme_radio_backgroundColor" format="reference|color"/>
     <attr name="theme_radio_drawableTint" format="reference|color"/>
     <attr name="theme_radio_buttonTint" format="reference|color"/>
@@ -33,5 +34,28 @@
     <attr name="theme_card_backgroundColor" format="reference|color"/>
     <!--仅限MaterialCardView-->
     <attr name="theme_card_strokeColor" format="reference|color"/>
+
+    <!-- BottomNavigationView-->
+    <attr name="theme_bottom_navigation_iconTint" format="reference|color"/>
+    <attr name="theme_bottom_navigation_textColor" format="reference|color"/>
+
+    <!--ImageView-->
+    <attr name="theme_imageView_tint" format="reference|color"/>
+
+
+    <!--FloatingActionButton-->
+    <attr name="theme_floating_tint" format="reference|color"/>
+    <attr name="theme_floating_backgroundColor" format="reference|color"/>
+
+    <!--EditText-->
+    <attr name="theme_edit_textColor" format="reference|color"/>
+    <attr name="theme_edit_hintColor" format="reference|color"/>
+    <attr name="theme_edit_cursorDrawable" format="reference"/>
+    <!--当EditText和TextInputLayout配合使用时候highlightColor要配合TextInputLayout的boxColor才起效-->
+    <attr name="theme_edit_highlightColor" format="reference|color"/>
+
+    <!--TextInputLayout-->
+    <attr name="theme_inputLayout_boxColor" format="reference|color"/>
+    <attr name="theme_inputLayout_hintColor" format="reference|color"/>
 
 </resources>
